# RTOS_app

./: CMakeLists.txt  arm-none-eabi-gcc.cmake  builder.Dockerfile  commands.txt  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
CubeMX/: .mxproject  CMakeLists.txt  CubeMX.ioc  STM32F407XX_FLASH.ld
CubeMX/Core/Inc/: main.h
CubeMX/Core/Src/: main.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c
include/: blink_led.h  main_app.h
src/: freertos_static.c  main_app.c
src/tasks/: blink_led.c
tests/unittest/: project.yml
tests/unittest/test/: test_main.c   test_main_app.c
tests/unittest/test/support/: unity_config.h
